[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "obx"
description = "OBX"
version = "30"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.scripts]
'obx'  = 'obx.__main__:wrapped'
'obxd' = 'obx.daemon:main'
'obxs' = 'obx.service:wrapped'


[project.urls]
"home" = "https://pypi.org/project/obx"
"bugs" = "https://github.com/bthate/obx/issues"
"source" = "https://github.com/bthate/obx"

[tool.setuptools]
packages = [
    "obx",
    "obx.modules"
]
zip-safe=true
